<resources>
    <string name="app_name">看医生</string>
    <!--<string name="app_name">看看医生</string>&lt;!&ndash; for xiaomi&ndash;&gt;-->
    <string name="nearby">附近</string>
    <string name="news">资讯</string>
    <string name="wiki">百科</string>
    <string name="me">我</string>
    <string name="back_to_exit">再按一次返回键退出看医生</string>
    <string name="click_to_skip">点击跳过 %ds</string>

    <!-- 广告 -->
    <string name="view_detail">查看详情</string>
    <string name="click_to_download">点击下载</string>
    <string name="click_to_start">点击启动</string>
    <string name="click_to_update">点击更新</string>
    <string name="downloading">下载中</string>
    <string name="download_completely">下载完成</string>
    <string name="download_failure">下载失败,点击重试</string>

    <!-- 通用 -->
    <string name="locating">获取您当前的位置</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="loading_more_data">更多数据加载中...</string>
    <string name="load_more_data">点击加载更多数据</string>
    <string name="loading">数据加载中...</string>
    <string name="request_failure">请求失败</string>

    <!-- 错误 -->
    <string name="unknown_error">未知错误</string>
    <string name="auth_failure_error">HTTP身份验证错误</string>
    <string name="network_error">服务器通信失败</string>
    <string name="no_connection_error">网络未连接</string>
    <string name="parse_error">数据错误</string>
    <string name="server_error">服务器处理错误</string>
    <string name="timeout_error">连接服务器超时</string>
    <string name="no_data_error">没有数据返回</string>

    <!-- 定位 -->
    <string name="find_loc_failure">获取当前位置出错</string>
    <string name="no_search_result">没有搜索到任何结果</string>
    <string name="search_data_error">搜索失败，错误码[%1$d]</string>
    <string name="distance_desc_m">%1$d米</string>
    <string name="distance_desc_km">%1$s公里</string>

    <!-- 附近 -->
    <string name="nearby_hospital">附近医院</string>
    <string name="nearby_drugstore">附近药店</string>
    <string name="go_there">前往</string>
    <string name="make_a_call">打电话</string>

    <!-- 资讯 -->
    <string name="healthy_news">健康资讯</string>

    <!-- 搜索 -->
    <string name="search">搜索</string>
    <string name="nearby_search_hint">输入医院或者药店的名称</string>
    <string name="disease_search_hint">输入疾病的名称</string>
    <string name="drug_search_hint">输入药品的名称</string>
    <string name="doctor_search_hint">输入医生的姓名</string>
    <string name="hospital_search_hint">输入医院的名称</string>

    <!-- 路线查询 -->
    <string name="no_routline_data">没有查询到合适的路线</string>
    <string name="detail">详情</string>
    <string name="navigation">导航</string>
    <string name="drive_route_detail">驾车路线详情</string>
    <string name="bus_route_detail">公交路线详情</string>
    <string name="tax_cost">打车约%1$d元</string>
    <string name="walk_route_detail">步行路线详情</string>
    <string name="ride_route_detail">骑行路线详情</string>
    <string name="set_out">出发</string>
    <string name="reach_the_end">到达终点</string>
    <string name="tax_the_end">打车到终点</string>
    <string name="station">%1$d站</string>
    <string name="walk_distance_format">步行%1$d米</string>

    <!-- 导航 -->
    <string name="tip">提示</string>
    <string name="exit_nav_msg">确定退出导航？</string>
    <string name="nav_init_error">导航初始化失败</string>
    <string name="caculate_route_line_error">计算路线失败，错误码[%1$d]</string>
    <string name="tts_init_error">语音初始化失败，错误码[%1$d]</string>

    <!-- 百科 -->
    <string name="wiki_title">医药百科</string>
    <string name="hospital">医院</string>
    <string name="wiki_disease">疾病</string>
    <string name="wiki_drugs">药品</string>
    <string name="wiki_emergency_treatment">急诊</string>
    <string name="wiki_department">科室</string>
    <string name="wiki_doctor">医生</string>
    <string name="filter">筛选</string>
    <string name="in_area">所在地区</string>
    <string name="hospital_level">医院等级</string>
    <string name="doctor_level">医生等级</string>

    <!-- 疾病详情 -->
    <string name="disease_brief_introduction">简介</string>
    <string name="disease_pathogeny">发病原因</string>
    <string name="disease_symptom">伴随症状</string>
    <string name="disease_check_method">检查方法</string>
    <string name="disease_distinguish_method">鉴别方法</string>
    <string name="disease_complication">并发症</string>
    <string name="disease_prevention">如何预防？</string>
    <string name="disease_treatment_method">治疗方法</string>

    <!-- 药品列表 -->
    <string name="chinese_medicine">中药</string>
    <string name="western_medicine">西药</string>
    <string name="health_products">保健品</string>

    <!-- 药品详情 -->
    <string name="drug_basic_info">基本信息</string>
    <string name="drug_usage">用法用量</string>
    <string name="drug_adr">不良反应</string>
    <string name="drug_contraindication">禁忌</string>
    <string name="drug_note">注意事项</string>
    <string name="drug_pregnantwomentaboo">孕妇及哺乳期妇女用药</string>
    <string name="drug_childrentaboo">儿童用药</string>
    <string name="drug_elderlytaboo">老人用药</string>
    <string name="drug_interaction">药物相互作用</string>
    <string name="drug_drugen">其他信息</string>
    <string name="drug_detail_basic_info_value">【药品通用名称】%1$s\n【主要成分】%2$s\n【形状及剂型】%3$s\n【适应症】%4$s\n【规格】%5$s\n【生厂商】%6$s\n【存放】%7$s\n【保质期】%8$s\n【国药准字】%9$s</string>

    <!-- 科室 -->
    <string name="summary">概述</string>
    <string name="more">更多</string>
    <string name="usual_disease_in_department">科室常见疾病</string>

    <!-- 医院\医生详情 -->
    <string name="phone">电话</string>
    <string name="address">地址</string>
    <string name="work_hospital">就职医院</string>
    <string name="major">擅长</string>
    <string name="short_brief">简历</string>
    <string name="hospital_phone_cliped">医院电话信息已经复制到剪切板</string>

    <!-- 个人中心 -->
    <string name="collect">收藏</string>
    <string name="uncollect">取消收藏</string>
    <string name="nav_setting">导航设置</string>
    <string name="version_check">版本检测</string>
    <string name="cache_clean">缓存清理</string>
    <string name="app_recommand">应用推荐</string>
    <string name="about">关于</string>
    <string name="about_app">关于看医生</string>
    <string name="about_developer">关于我们</string>
    <string name="contact_us">联系我们</string>
    <string name="disclaimer">免责声明</string>
    <string name="bit_cat_owner">比特猫(BitCat)工作室</string>
    <string name="app_qq_group">看医生App交流QQ群号：467321786</string>
    <string name="mail_client_choose">请选择邮件类应用</string>
    <string name="lastest_version_already">您现在使用的客户端已经是最新版本</string>
    <string name="wifi_update_only">没有wifi连接， 只在wifi下更新</string>
    <string name="query_version_timeout">检查版本超时</string>
    <string name="disk_cache_clean_result">恭喜你清除掉了%1$sM的垃圾，再接再厉！</string>
    <string name="nav_voice_setting">语音设置</string>
    <string name="favorites_disease">收藏的疾病</string>
    <string name="favorites_drug">收藏的药品</string>
    <string name="favorites_emergency">收藏的急诊</string>
    <string name="favorites_department">收藏的科室</string>
    <string name="favorites_doctor">收藏的医生</string>
    <string name="favorites_hospital">收藏的医院</string>
    <string name="favorites_news">收藏的资讯</string>
    <string name="all">全部</string>
    <string name="no_favorite_selected">至少选择一项</string>
    <string name="trash">删除</string>
    <string name="profile_edit">编辑个人资料</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="sex_male">一位绅士</string>
    <string name="sex_female">一位淑女</string>
    <string name="waiting_for_a_name">取一个响亮的名字</string>

    <string name="bmob_update_lastest_already">已是最新版本，无需更新</string>
    <string name="bmob_update_field_error">请检查你AppVersion表的必填项，1、target_size（文件大小）是否填写；2、path或者android_url两者必填其中一项。</string>
    <string name="bmob_update_version_ignore">该版本已被忽略更新</string>
    <string name="bmob_update_apk_size_error">请检查target_size填写的格式，请使用file.length()方法获取apk大小。</string>
    <string name="bmob_update_error">查询出错或查询超时</string>

    <!-- 权限申请 -->
    <string name="permission_cancel">取消</string>
    <string name="permission_setting">设置</string>
    <string name="permission_title_permission_failed">权限申请失败</string>
    <string name="permission_message_permission_failed">我们需要的一些权限被您拒绝或者系统发生错误申请失败，请您到设置页面手动授权，否则功能无法正常使用！</string>

    <string name="permission_resume">继续</string>
    <string name="permission_title_permission_rationale">权限已被拒绝</string>
    <string name="permission_message_permission_rationale">您已经拒绝过我们申请授权，请您同意授权，否则功能无法正常使用！</string>

</resources>
