<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.wdd.app.android.seedoctor.ui.me.activity.ProfileEditActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_profie_edit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit"
            android:textSize="@dimen/textSizeToolbarTitle"
            android:textColor="@color/colorToolbarTitle"
            android:layout_gravity="top|center_horizontal"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:clickable="true">

        <ImageView
            android:id="@+id/activity_profie_edit_headimg"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_male_header"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:gravity="center_vertical"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorItemTitle"
            android:textSize="@dimen/textSizeItemTitle"
            android:text="@string/nickname"/>

        <EditText
            android:id="@+id/activity_profie_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_marginLeft="15dp"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/wiki_divider_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:gravity="center_vertical"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorItemTitle"
            android:textSize="@dimen/textSizeItemTitle"
            android:text="@string/sex"/>

        <RadioGroup
            android:id="@+id/activity_profie_edit_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/activity_profie_edit_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex_male"/>

            <RadioButton
                android:id="@+id/activity_profie_edit_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex_female"
                android:layout_marginLeft="6dp"/>

        </RadioGroup>

    </LinearLayout>

</LinearLayout>
