<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.wdd.app.android.seedoctor.ui.me.activity.AboutAppActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_about_app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_app"
            android:textColor="@color/colorToolbarTitle"
            android:textSize="@dimen/textSizeToolbarTitle" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:background="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSizeItemTitle" />

        <TextView
            android:id="@+id/activity_about_version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="15dp"
            android:text="v.1.1"
            android:textColor="@color/colorItemContent"
            android:textSize="@dimen/textSizeItemContent" />

        <RelativeLayout
            android:id="@+id/activity_about_contact_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/common_list_item_bg"
            android:clickable="true"
            android:onClick="onContactClicked"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="10dp">

            <ImageView
                android:id="@+id/activity_about_contact_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_at" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="6dp"
                android:layout_toRightOf="@id/activity_about_contact_icon"
                android:text="@string/contact_us"
                android:textColor="@color/colorItemTitle"
                android:textSize="@dimen/textSizeItemContent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/arrow_right" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/wiki_divider_color" />

        <RelativeLayout
            android:id="@+id/activity_about_disclaimer_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/common_list_item_bg"
            android:clickable="true"
            android:onClick="onDisclaimerClicked"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="10dp">

            <ImageView
                android:id="@+id/activity_about_disclaimer_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_horn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="6dp"
                android:layout_toRightOf="@id/activity_about_disclaimer_icon"
                android:text="@string/disclaimer"
                android:textColor="@color/colorItemTitle"
                android:textSize="@dimen/textSizeItemContent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/arrow_right" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bit_cat_owner"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorItemExtra"
                android:textSize="@dimen/textSizeItemExtra"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
