<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.wdd.app.android.seedoctor.ui.me.activity.AboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_gravity="center"
            android:textSize="@dimen/textSizeToolbarTitle"
            android:textColor="@color/colorToolbarTitle"/>

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:background="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/textSizeItemTitle"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/activity_about_version_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorItemContent"
                android:textSize="@dimen/textSizeItemContent"
                android:layout_marginBottom="30dp"
                android:text="v.1.1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center|bottom"
                android:layout_marginBottom="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/bitcat"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColor="@color/colorItemExtra"
                    android:text="@string/bit_cat_owner" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/activity_about_contact_click"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:onClick="onContactClicked"
                android:background="@drawable/common_list_item_bg">

                <ImageView
                    android:id="@+id/activity_about_contact_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_at" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us"
                    android:textColor="@color/colorItemTitle"
                    android:textSize="@dimen/textSizeItemContent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@id/activity_about_contact_icon"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/arrow_right"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/wiki_divider_color"/>

            <RelativeLayout
                android:id="@+id/activity_about_disclaimer_click"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="40dp"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:onClick="onDisclaimerClicked"
                android:background="@drawable/common_list_item_bg">

                <ImageView
                    android:id="@+id/activity_about_disclaimer_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_horn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disclaimer"
                    android:textColor="@color/colorItemTitle"
                    android:textSize="@dimen/textSizeItemContent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@id/activity_about_disclaimer_icon"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/arrow_right"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
