<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.wdd.app.android.seedoctor.ui.encyclopedia.activity.DoctorFilterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_doctor_filter_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarSize"
        android:background="@drawable/title_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:layout_gravity="center"
            android:textSize="@dimen/textSizeToolbarTitle"
            android:textColor="@color/colorToolbarTitle"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/activity_doctor_filter_dataview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_list_item_bg"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:onClick="onProvinceClicked">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_area"
                android:textSize="@dimen/textSizeItemTitle"
                android:textColor="@color/colorItemTitle"/>

            <ImageView
                android:id="@+id/activity_doctor_filter_area_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/arrow_right"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/activity_doctor_filter_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSizeItemContent"
                android:textColor="@color/colorItemContent"
                android:layout_centerVertical="true"
                android:layout_marginRight="6dp"
                android:layout_toLeftOf="@id/activity_doctor_filter_area_arrow"/>
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/wiki_divider_color"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_list_item_bg"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:onClick="onHospitalLevelClicked">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hospital_level"
                android:textSize="@dimen/textSizeItemTitle"
                android:textColor="@color/colorItemTitle"/>

            <ImageView
                android:id="@+id/activity_doctor_filter_hospital_level_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/arrow_right"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/activity_doctor_filter_hospital_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSizeItemContent"
                android:textColor="@color/colorItemContent"
                android:layout_centerVertical="true"
                android:layout_marginRight="6dp"
                android:layout_toLeftOf="@id/activity_doctor_filter_hospital_level_arrow"/>
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/wiki_divider_color"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_list_item_bg"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:onClick="onDoctorLevelClicked">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor_level"
                android:textSize="@dimen/textSizeItemTitle"
                android:textColor="@color/colorItemTitle"/>

            <ImageView
                android:id="@+id/activity_doctor_filter_doctor_level_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/arrow_right"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/activity_doctor_filter_doctor_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSizeItemContent"
                android:textColor="@color/colorItemContent"
                android:layout_centerVertical="true"
                android:layout_marginRight="6dp"
                android:layout_toLeftOf="@id/activity_doctor_filter_doctor_level_arrow"/>
        </RelativeLayout>

    </LinearLayout>

    <org.wdd.app.android.seedoctor.views.LoadView
        android:id="@+id/activity_doctor_filter_loadview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
